--- a/chips-webapp/package.json
+++ b/chips-webapp/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^7.2.1",
     "firebase": "^7.17.2",
     "react": "^16.13.1",
+    "react-device-detect": "^1.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
-    "react-swipeable-views": "^0.13.9"
+    "react-swipeable-views": "^0.13.9",
+    "sweetalert2": "^9.17.2"
   },
   "scripts": {
     "start": "react-scripts start",
