--- a/chips-webapp/package.json
+++ b/chips-webapp/package.json
@@ -6,7 +6,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "firebase": "^7.17.2",
+    "firebase": "^7.21.1",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-device-detect": "^1.13.1",
     "react-dom": "^16.13.1",
